--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # 站点名称
-VITE_SITE_NAME = "無名の主页"
-VITE_SITE_URL = "imsyy.top"
+VITE_SITE_NAME = "追剧音乐和游戏"
+VITE_SITE_URL = "wzry623090bk.top"
 VITE_SITE_LOGO = "/images/icon/logo.png"
 
 # 简介文本
 VITE_DESC_HELLO = "Hello World !"
-VITE_DESC_TEXT = "一个建立于 21 世纪的小站，存活于互联网的边缘"
+VITE_DESC_TEXT = "一个建立于2023小站，存活于互联网的边缘"
 VITE_DESC_HELLO_OTHER = "Oops !"
 VITE_DESC_TEXT_OTHER = "哎呀，这都被你发现了（ 再点击一次可关闭 ）"
 
@@ -30,8 +30,8 @@ VITE_SITE_START = "2020-10-24"
 ## 备用：https://api.wuenci.com/meting/api/
 VITE_SONG_API = "https://api-meting.imsyy.top/api"
 # 歌曲服务器 ( netease-网易云, tencent-qq音乐 )
-VITE_SONG_SERVER = "netease"
+VITE_SONG_SERVER = "tencent-qq"
 # 播放类型 ( song-歌曲, playlist-播放列表, album-专辑, search-搜索, artist-艺术家 )
-VITE_SONG_TYPE = "playlist"
+VITE_SONG_TYPE = "search"
 # 播放 ID
-VITE_SONG_ID = "7452421335"
+VITE_SONG_ID = "5070288261"
